<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--    用户相关-->
    <string name="exit">退出</string>
    <string name="login">登录</string>
    <string name="username">用户</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="re_password">再次输入密码</string>
    <string name="register">注册账号</string>
    <string name="forget_password">忘记密码?</string>
    <string name="retrieve_password">找回密码</string>
    <string name="change">修改</string>
    <string name="code">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="not_empty">用户名或密码不能为空</string>
    <string name="sys_error">系统异常</string>
    <string name="password_not_same">密码不一致</string>
    <string name="register_faild">注册失败，请检查网络后重试</string>
    <string name="on_loadding">加载中</string>
    <!--    用户相关-->


    <!--    相机相关-->
    <string name="select_file_error">选择文件错误</string>
    <string name="file_not_video">选择的文件不是mp4格式</string>
    <string name="train_steps">训练次数</string>
    <string name="video_name">视频名</string>
    <string name="upload">上传</string>
    <string name="filename_or_steps_null">文件名或训练步数不能为空</string>
    <string name="upload_success">视频处理中</string>
    <string name="upload_faild">上传失败，请检查网络重试</string>
    <string name="load_faild">加载失败，请检查网络重试</string>
    <string name="delete_faild">删除失败，请检查网络重试</string>
    <string name="on_uploadding">上传中</string>
    <string name="create_model">创建模型</string>
    <string name="from_video_create">从相册创建</string>
    <string name="from_drone_create">从无人机创建</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="setting">设置</string>
    <string name="model_setting">模型设置</string>
    <!--    相机相关-->


    <!--系统名词-->
    <string name="reconstruction">三维重建</string>
    <!--系统名词-->

    <!--系统相关-->
    <string name="response_null">请求结果异常</string>
    <string name="waiting">请稍后</string>
    <string name="personal_setting">个人设置</string>
    <string name="search_hint">输入关键词搜索</string>
    <!--系统相关-->

<!--    无人机相关-->
    <string name="app_name">三维重建系统</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="start_upload">开始上传</string>
    <string name="stop_upload">停止上传</string>
    <string name="parameter_settings">参数设置</string>
    <string name="drone_video_uploading">无人机视频上传中</string>
    <string name="clear_cache">清空缓存</string>
    <!--    无人机相关-->

</resources>