<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_page">

<!--    <RelativeLayout style="@style/topbar_bg">-->

<!--        <ImageButton-->
<!--            style="@style/topbar_return_img"-->
<!--            android:contentDescription="@string/exit" />-->

<!--        <TextView-->
<!--            style="@style/topbar_title"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:text="@string/login" />-->

<!--    </RelativeLayout>-->

    <RelativeLayout
        style="@style/activity_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alpha_1">


        <TextView
            style="@style/topbar_title"
            android:layout_width="231dp"
            android:layout_height="65dp"
            android:layout_marginTop="60dp"
            android:text="@string/reconstruction"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/username"
                style="@style/edit_item_right_et_padding"
                android:layout_margin="10dp"
                android:autofillHints="username"
                android:background="@color/gray_interest"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                style="@style/edit_item_right_et_padding"
                android:layout_margin="10dp"
                android:autofillHints="password"
                android:background="@color/gray_interest"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/login" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/register_btn"
                    style="@style/add_img"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/register" />

                <TextView
                    style="@style/text_small"
                    android:layout_gravity="center"
                    android:text="@string/register" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/forget_password_btn"
                    style="@style/forget_password_img"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:contentDescription="@string/forget_password" />

                <TextView
                    style="@style/text_small"
                    android:layout_gravity="center"
                    android:text="@string/forget_password" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>