<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/activity_page">

    <RelativeLayout
        style="@style/activity_page"
        android:background="@drawable/login_background">

        <LinearLayout
            style="@style/ll_vertical_match_wrap"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:background="@color/colorDarkBackground"

            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorInputField"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/match_wrap"
                        android:layout_margin="10dp"
                        android:hint="@string/email"
                        app:cornerFamily="rounded"
                        app:cornerSize="16dp"
                        app:endIconMode="clear_text"
                        app:startIconDrawable="@drawable/account">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/account_et"
                            style="@style/match_wrap"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/send_code_tv"
                        style="@style/text_small"
                        android:layout_gravity="right"
                        android:layout_marginEnd="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/send_code" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/match_wrap"
                        android:layout_margin="10dp"
                        android:hint="@string/code"
                        app:cornerFamily="rounded"
                        app:startIconDrawable="@drawable/captcha_code"
                        app:cornerSize="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/code_et"
                            style="@style/match_wrap"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/match_wrap"
                        android:layout_margin="10dp"
                        android:hint="@string/new_password"
                        app:cornerFamily="rounded"
                        app:cornerSize="16dp"
                        app:startIconDrawable="@drawable/password"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/new_password_et"
                            style="@style/match_wrap"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/match_wrap"
                        android:layout_margin="10dp"
                        android:hint="@string/re_password"
                        app:cornerFamily="rounded"
                        app:cornerSize="16dp"
                        app:startIconDrawable="@drawable/password"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_password_et"
                            style="@style/match_wrap"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="#20FFFFFF"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/retrieve_bt"
                    style="@style/btn_middle"
                    android:layout_width="200dp"
                    android:text="@string/change"
                    android:textColor="@color/white" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>