<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_page" >

    <RelativeLayout style="@style/topbar_bg"
        android:background="@color/colorMain"
        >

        <ImageButton style="@style/topbar_return_img" />

        <TextView
            style="@style/topbar_title"
            android:layout_centerHorizontal="true"
            android:text="@string/upload" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/video_name_et"
                style="@style/edit_item_right_et_padding"
                android:layout_margin="10dp"
                android:background="@color/gray_interest"
                android:hint="@string/video_name"
                android:inputType="text" />
            <EditText
                android:id="@+id/train_steps_et"
                style="@style/edit_item_right_et_padding"
                android:layout_margin="10dp"
                android:background="@color/gray_interest"
                android:hint="@string/train_steps"
                android:text="1000"
                android:inputType="number" />
            <Button
                android:id="@+id/upload_btn"
                style="@style/btn_middle"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_width="200dp"
                android:layout_marginTop="80dp"
                android:text="@string/upload" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>